--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,12 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
     "jsonwebtoken": "^9.0.2",
+    "mailtrap": "^3.4.0",
     "mongoose": "^8.7.2",
     "nodemailer": "^6.9.16",
     "validator": "^13.12.0"
