--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bulma": "^1.0.2",
+    "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
     "mongodb": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "uuid": "^11.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
