--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://localhost:4000",
+  "proxy": "https://chemreactapp.onrender.com",
   "name": "react-chem-app",
   "version": "0.1.0",
   "private": true,
@@ -19,7 +19,6 @@
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
-    "mongodb": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
