--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
     "axios": "^1.7.7",
     "bulma": "^1.0.2",
     "classnames": "^2.5.1",
+    "cross-spawn": "^7.0.6",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
+    "print-js": "^1.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
