--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,15 +1,7 @@
 {
-  "proxy": "https://chemreactapp.onrender.com",
   "name": "react-chem-app",
   "version": "0.1.0",
   "private": true,
-  "overrides": {
-    "react-scripts": {
-      "@svgr/webpack": "8.1.0",
-      "typescript": "4.9.5",
-      "postcss": "8.4.38"
-    }
-  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -24,21 +16,13 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1",
     "uuid": "^11.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "browserslist": {
     "production": [
@@ -51,5 +35,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^5.0.2",
+    "vite": "^7.1.3",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
